--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,19 @@
 <!doctype html>
 <html lang="en">
   <html>
-  <head></head>
+  <head>
+    <style>
+      background-color{
+        color:blue;
+      }
+      h1 {
+          text-align: center;
+      }
+    </style>
+    </head>
     <body>
-      <h1>hello</h1>
+        <header><img src="images - Copy/flower-gerbel-3852488_1280.jpg"></header>
+      <h1>Flowers</h1>
+     
     </body>
   </html>
