--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -1,1 +1,12 @@
-
+<!doctype html>
+<html lang="en">
+  <html>
+  <head>
+  
+    </head>
+    <body>
+        <header><img src="images - Copy/flower-gerbel-3852488_1280.jpg"></header>
+      <h1>Flowers</h1>
+     
+    </body>
+  </html>
