--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <html>
   <head>
-  
+  <link href="images/apple-icon-57x57.png" rel="shortcut icon" type="image/png"/>
+    <link href="cool.css" rel="stylesheet">
+                                                               
     </head>
     <body>
+
         <header><img src="images - Copy/flower-gerbel-3852488_1280.jpg"></header>
       <h1>Flowers</h1>
      
