--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -3,7 +3,7 @@
   <html>
   <head>
   <link href="images/apple-icon-57x57.png" rel="shortcut icon" type="image/png"/>
-    <link href="cool.css" rel="stylesheet">
+    <link href="assignment3/cool.css" rel="stylesheet">
                                                                
     </head>
     <body>
